@@ -27,7 +27,7 @@
 #include <termios.h>
 #include <fcntl.h>
 #include <string.h>
-#include <sys/errno.h>
+#include <errno.h>
 
 #ifdef HAVE_CONFIG_H
 # include "config.h"
