@@ -28,7 +28,7 @@
 #include <termios.h>
 #include <fcntl.h>
 #include <string.h>
-#include <sys/errno.h>
+#include <errno.h>
 //#include <sys/io.h>
 #include <time.h>
 #include "port.h"
